Fix the bug when text of the #winning-message shifts to the left on small screens

--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,8 @@ main {
     align-items: center;
     gap: 16px;
 
+    text-align: center; /* fixes the bug when text shifts to the left on small screens */
+
     position: fixed;
     left: 0;
     top: 0;
